--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
 	 <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
-<body id="body">
+<body >
   <center>
-<h1 id="heading"><u><b><marquee>FOOD CHAIN</marquee></b></u></h1>
+<h1 id="head" style="font-family: Curlz MT;color: red;"><b><u><marquee>FOOD CHAIN</marquee></u></b></h1>
 </center>
+
+
   <div class="content">
-<img src="lion.gif">
+  
+  <div id="goat">
+<img src="goat.gif">
   </div>
+  	<div id="men">
+<img src="men.gif">
+  </div>
+  	<div id="ass">
+<img src="ass.gif">
+  </div>
+  	<div id="bull">
+<img src="bull.gif">
+  </div>
+  	<div id="lion2">
+<img src="lion2.gif">
+  </div>
+<img src="lion.gif"></div>
+
+  
+   
 </body>
 </html>
